update vctk preprocess arguments

--- a/deepvoice3_0421749/.vscode/launch.json
+++ b/deepvoice3_0421749/.vscode/launch.json
@@ -32,5 +32,15 @@
             "console": "integratedTerminal"
         },        
 
+        {
+            "name": "preprocess",
+            "type": "python",
+            "request": "launch",
+            "program": "preprocess.py",
+            "console": "integratedTerminal",
+            "args":["vctk","./vctk","./vctk"],
+            "justMyCode": false
+            //python preprocess.py  vctk ./vctk ./vctk
+        },    
     ]
 }
