generate mel/audio for wavenet input

--- a/deepvoice3_0421749/.vscode/launch.json
+++ b/deepvoice3_0421749/.vscode/launch.json
@@ -10,7 +10,11 @@
             "request": "launch",
             "program": "synthesis.py",
             "console": "integratedTerminal",
-            "args":["./checkpoints/20210412_cei_ljspeech_checkpoint_step001630000.pth","./demostring.txt","/eval_output/", "--hparams","builder=deepvoice3,preset=deepvoice3_ljspeech"
+            //"args":["./checkpoints/20210412_cei_ljspeech_checkpoint_step001630000.pth","./demostring.txt","./eval_output/", "--hparams","builder=deepvoice3,preset=deepvoice3_ljspeech"
+            "args":["./checkpoints/20210503_cei_ljspeech_vctk_p225_10min_checkpoint_step000010000.pth",
+                "./demostring.txt",
+                "./eval_output/", 
+                "--hparams","builder=deepvoice3,preset=deepvoice3_ljspeech"
             ]
         },
 
