--- a/deepvoice3_0421749/.vscode/launch.json
+++ b/deepvoice3_0421749/.vscode/launch.json
@@ -16,6 +16,9 @@
                 "./eval_output/", 
                 "--hparams","builder=deepvoice3,preset=deepvoice3_ljspeech"
             ]
+            // run on terminal
+            // python synthesis.py "./checkpoints/20210503_cei_ljspeech_vctk_p225_10min_checkpoint_step000010000.pth" "./demostring.txt"  "./eval_output/"  "--hparams=builder=deepvoice3,preset=deepvoice3_ljspeech"
+
         },
 
         {
