python running synthesis sample command for specifice tts images

--- a/deepvoice3_0421749/.vscode/launch.json
+++ b/deepvoice3_0421749/.vscode/launch.json
@@ -18,7 +18,7 @@
             ]
             // run on terminal
             // python synthesis.py "./checkpoints/20210503_cei_ljspeech_vctk_p225_10min_checkpoint_step000010000.pth" "./demostring.txt"  "./eval_output/"  "--hparams=builder=deepvoice3,preset=deepvoice3_ljspeech"
-
+            // python synthesis.py "./checkpoints/20210426_cei_ljspeech_vctk_p225_checkpoint_step000020000.pth" "./demostring.txt"  "./eval_output/"  "--hparams=builder=deepvoice3,preset=deepvoice3_ljspeech"
         },
 
         {
